# yst

./: LICENSE  README.md  pyproject.toml
src/yst/: fp.py  sh.py
src/yst/hack/: __init__.py  forbiddenfruit.py  normal.py
tests/: test_fp.py  test_hack.py
