[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "youz17", email = "youz17@qq.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "youz's script tools"
name = "yst"
readme = "README.md"
requires-python = ">=3.7"
version = "0.0.2"

[project.urls]
"Bug Tracker" = "https://github.com/youz17/yst/issues"
"Homepage" = "https://github.com/youz17/yst"
